--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
 
     <footer class="footer mt-auto py-3 bg-light text-center">
         <div class="container">
-            <span class="text-muted">Группа: [ВАША_ГРУППА], Разработчик: [ВАШЕ_ФИО]</span>
+            <span class="text-muted">Группа: 231-3212, Разработчик: Смоткин Алексей Алексеевич</span>
         </div>
     </footer>
 
