--- a/templates/equipment_detail.html
+++ b/templates/equipment_detail.html
@@ -60,7 +60,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for log in asset.maintenance_logs.order_by(asset.maintenance_logs.c.log_date.desc()).all() %}
+                    {% for log in asset.maintenance_logs.order_by(MaintenanceLog.log_date.desc()).all() %}                    
                     <tr>
                         <td>{{ log.log_date.strftime('%d.%m.%Y') }}</td>
                         <td>{{ log.maintenance_type }}</td>
@@ -120,8 +120,7 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.ru.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
 
