--- a/templates/qr_scanner.html
+++ b/templates/qr_scanner.html
@@ -14,11 +14,9 @@
         </div>
     </div>
 </div>
-{% endblock %}
 
-{% block scripts %}
 <!-- html5-qrcode CDN -->
-<script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
+<script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 <script>
     function onScanSuccess(decodedText, decodedResult) {
         // Handle the scanned code as you like, for example:
